--- a/index.html
+++ b/index.html
@@ -171,9 +171,10 @@
                 height="300"
                 class="portfolio-img"
               />
-              <div class="portfolio-item-container"></div>
-              <h3 class="portfolio-product">Banking App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-product">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -183,9 +184,10 @@
                 height="300"
                 class="portfolio-img"
               />
-              <div class="portfolio-item-container"></div>
-              <h3 class="portfolio-product">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-product">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -195,9 +197,10 @@
                 height="300"
                 class="portfolio-img"
               />
-              <div class="portfolio-item-container"></div>
-              <h3 class="portfolio-product">Meditation App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-product">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -207,9 +210,10 @@
                 height="300"
                 class="portfolio-img"
               />
-              <div class="portfolio-item-container"></div>
-              <h3 class="portfolio-product">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-product">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -219,9 +223,10 @@
                 height="300"
                 class="portfolio-img"
               />
-              <div class="portfolio-item-container"></div>
-              <h3 class="portfolio-product">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-product">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -231,9 +236,10 @@
                 height="300"
                 class="portfolio-img"
               />
-              <div class="portfolio-item-container"></div>
-              <h3 class="portfolio-product">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-item-container">
+                <h3 class="portfolio-product">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
